<resources>
    <string name="nav_login">Log in</string>
    <string name="nav_register">Register</string>
    <string name="app_name">Nuvola</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="vehicle_types">
        <item>Select vehicle type</item>
        <item>Standard</item>
        <item>Luxury</item>
        <item>Van</item>
    </string-array>
    <string name="forgot_password_email">Enter your email and we will send you a reset link.</string>
    <string name="email_address">Email Address</string>
    <string name="send_link">"Send Reset Link"</string>
    <string name="back_to_login">Back to login</string>
    <string name="login_">Log in</string>
    <string name="register_">Register</string>
    <string name="welcome">Welcome back</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="password_enter">Enter your password</string>
    <string name="remember">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="message_account">Don’t have an account? Sign up</string>
    <string name="create_account">Create Your Account</string>
    <string name="upload_picture">Upload profile picture (optional)</string>/
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Phone number</string>
    <string name="home_address">Home Address</string>
    <string name="create_account_">Create Account</string>
    <string name="already_registered">Already have an account? Sign in"</string>
    <string name="reset_password_">Reset Password</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="menu">menu</string>
</resources>